--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.topper {
+  background-color: #f5d90e;
+}
+
+.btn-area {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 12px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 24px;
+  gap: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  opacity: 0.6;
+}
+
+.btn-login {
+  /* primary */
+
+  background: #391cee;
+}
+
+.btn-signup,
+.btn-estimate {
+  background: #f5d90e;
+}
+
+option:focus {
+  outline: none;
+  outline-style: none;
+}
+
+input:focus {
+  outline: none;
+  outline-style: none;
+}
+
+input {
+  border: 2px solid #f5d90e;
+  height: 2rem;
+  border-radius: 5px;
+  width: 180px;
+}
+
+.city {
+  border: 2px solid #f5d90e;
+  height: 2rem;
+  border-radius: 5px;
+  width: 180px;
 }
