--- a/src/component/container1/containerone.css
+++ b/src/component/container1/containerone.css
@@ -7,7 +7,7 @@
 }
 .container-1 {
   /* position: relative; */
-  padding-top: 5rem;
+  /* padding-top: 5rem; */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
