--- a/src/component/NavBar/navbar.css
+++ b/src/component/NavBar/navbar.css
@@ -1,9 +1,12 @@
 .nav {
+  position: fixed;
+  top: 0;
   justify-content: space-around;
-  padding: 5px 5rem;
+  /* padding: 5px 5rem; */
   background: rgba(254, 253, 243, 0.7);
   box-shadow: 0px 5px 33px rgba(185, 212, 237, 0.3);
   z-index: 9999;
+  width: 100%;
   animation: come-up 2s ease forwards;
 }
 
@@ -17,9 +20,8 @@
 }
 
 .nav .nav-container {
-  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -57,6 +59,5 @@
 
 .nav .nav-container .btn-area .btn-login {
   /* primary */
-
   background: #391cee;
 }
