--- a/src/component/container1/selectitem.css
+++ b/src/component/container1/selectitem.css
@@ -1,13 +1,12 @@
 .travel {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  bottom: -15rem;
+  width: 70%;
   background-color: #391cee;
-  margin: 6px auto;
-  margin-top: 5rem;
-  padding: 20px 80px;
-  /* width: 70%; */
+  margin: 3px auto;
+  margin-top: 2rem;
+  padding: 10px 60px;
+  max-width: 800px;
   justify-content: flex-start;
 }
 
@@ -18,11 +17,27 @@
 .travel .travel-input {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 10px;
   /* justify-content: space-between; */
   align-items: center;
 }
 
 .travel .travel-input .travel-item {
   align-items: center;
+}
+
+@media screen and (max-width: 1198px) {
+  .travel {
+    display: flex;
+    width: 9rem;
+    justify-content: flex-start;
+    margin: 2rem 0 4px 2rem;
+  }
+  .travel .travel-input {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    /* justify-content: space-between; */
+    align-items: center;
+  }
 }
