--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  padding: 0;
+  margin: 0;
 }
 
 code {
@@ -31,8 +34,8 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 24px;
-  gap: 10px;
+  padding: 16px 15px;
+  gap: 5px;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -43,13 +46,20 @@ ul {
 
 .btn-login {
   /* primary */
-
   background: #391cee;
 }
 
-.btn-signup,
-.btn-estimate {
+.btn-signup {
   background: #f5d90e;
+}
+
+.btn-estimate {
+  display: flex;
+  justify-content: center;
+  background: #f5d90e;
+  width: 250px;
+  align-items: center;
+  min-height: 1rem;
 }
 
 option:focus {
