our services section1

--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -93,11 +93,26 @@
 .service .service-container .move-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  width: 90%;
   padding: 20px;
   align-items: center;
   margin: 1rem;
   gap: 10px;
+}
+@media screen and (max-width: 1497px) {
+  .service .service-container .move-container > *:first-child {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+  }
+}
+
+@media screen and (max-width: 1013px) {
+  .service .service-container .move-container {
+    grid-template-columns: 1fr;
+  }
+  .service .service-container .move-container > *:first-child {
+    grid-column: 1;
+    grid-row: 1;
+  }
 }
 
 .service .service-container .move-container .move-item {
