--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -105,7 +105,7 @@
   }
 }
 
-@media screen and (max-width: 1013px) {
+/* @media screen and (max-width: 1013px) {
   .service .service-container .move-container {
     grid-template-columns: 1fr;
   }
@@ -113,7 +113,7 @@
     grid-column: 1;
     grid-row: 1;
   }
-}
+} */
 
 .service .service-container .move-container .move-item {
   display: flex;
