--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -21,6 +21,7 @@
   justify-content: space-around;
   align-items: center;
   gap: 20px;
+
   width: 95%;
 }
 
@@ -33,12 +34,13 @@
 
 .service .service-container .service-area .para p {
   font-family: Montserrat;
-  font-size: 25px;
-  font-weight: 500;
-  line-height: 42px;
+  font-size: 20px;
+  font-weight: 450;
+  line-height: 40px;
   color: #020e12;
   text-align: justified;
   padding-right: 20px;
+  text-align: center;
   width: 90%;
 }
 
@@ -47,15 +49,22 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 10rem;
+  height: 13rem;
+  padding: 2px 5px;
+
   width: 50%;
 }
 
 .service .service-container .service-area .service-text h1 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
   font-family: "Josefin Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
+  font-size: 50px;
   /* line-height: 58px; */
   /* or 91% */
 
@@ -66,17 +75,18 @@
 }
 
 .service .service-container .service-area .service-text h5 {
+  justify-content: center;
+  align-items: center;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 600;
-  font-size: 36px;
+  font-size: 26px;
   line-height: 58px;
   /* or 161% */
 
   /* primary */
   color: #391cee;
   margin: 0;
-  width: 50%;
   padding: 0;
 }
 
@@ -108,8 +118,9 @@
 
   gap: 70px;
 
-  width: 385px;
-  height: 476px;
+  width: 300px;
+  height: 466px;
+  /* background will be for image url for all the card boxes  */
 
   background: #fbfeff;
 
@@ -179,9 +190,8 @@
 /* this will be for the other info section  */
 
 .service .service-container .other-info {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   padding: 20px;
   margin: 1rem;
   gap: 10px;
@@ -230,7 +240,17 @@
   letter-spacing: 0.114763px;
 }
 
-@media screen and (max-width: 1497px) {
+@media screen and (max-width: 1638px) {
+  .service .service-container .other-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px;
+    margin: 0;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 1166px) {
   .service .service-container .move-container {
     padding: 5px 30px;
     padding-left: 13rem;
@@ -241,28 +261,18 @@
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
   }
+
   .service .service-container .move-container > :nth-child(2) {
     grid-column: 2 / span 3;
   }
+
   .service .service-container .move-container > *:last-child {
     grid-column: 2 / span 2;
     grid-row: 2 / span 2;
   }
 }
 
-@media screen and (max-width: 1166px) {
-  .service .service-container .move-container {
-    grid-template-columns: 1fr;
-  }
-
-  .service .service-container .move-container {
-    padding: 5px 30px;
-    padding-left: 10rem;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (max-width: 1110px) {
+@media screen and (max-width: 889px) {
   .service .service-container .move-container {
     grid-template-columns: 1fr;
   }
@@ -276,10 +286,6 @@
 
 @media screen and (max-width: 1090px) {
   .service .service-container .move-container {
-    grid-template-columns: 1fr;
-  }
-
-  .service .service-container .move-container {
     padding: 5px 30px;
     padding-left: 5rem;
     margin: 0 auto;
@@ -288,12 +294,8 @@
 
 @media screen and (max-width: 1046px) {
   .service .service-container .move-container {
-    grid-template-columns: 1fr;
-  }
-
-  .service .service-container .move-container {
     padding: 5px 30px;
-    padding-left: 1rem;
+    padding-left: 5rem;
     margin: 0 auto;
   }
 }
@@ -304,18 +306,39 @@
   }
 
   .service .service-container .move-container {
-    gap: 20px;
+    padding: 5px 30px;
+    padding-left: 8rem;
+    margin: 0 auto;
   }
+
   .service .service-container .move-container > *:first-child {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
   }
+
   .service .service-container .move-container > :nth-child(2) {
     grid-column: 1 / span 1;
     grid-row: 2 / span 2;
   }
+
   .service .service-container .move-container > *:last-child {
     grid-column: 1 / span 1;
     grid-row: 4 / span 4;
+  }
+
+  .service .service-container .other-info {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 809px) {
+  .service .service-container .other-info {
+    grid-template-columns: 1fr;
+  }
+
+  .service .service-container .move-container {
+    padding: 5px 30px;
+    padding-left: 1rem;
+    margin: 0 auto;
   }
 }
