--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ code {
     monospace;
 }
 
+h4,
+h6 {
+  padding: 0;
+  margin: 0;
+}
+
 ul {
   list-style-type: none;
 }
@@ -97,4 +103,33 @@ input {
   color: white;
   background-color: #565bdf;
   border-radius: 50%;
+}
+
+.user {
+  box-sizing: border-box;
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px 20px;
+  gap: 10px;
+
+  border: 1.10507px solid #391cee;
+  box-shadow: 6px 10px 10px rgba(50, 50, 50, 0.25);
+  /* primary */
+  background: #391cee;
+}
+
+.userprofile {
+  font-size: 70px;
+  border-radius: 50%;
+}
+
+.user-testimonie-top {
+  gap: 30px;
+}
+
+.star {
+  color: #f5d90e;
 }
