--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
-.service .service-container {
+.service-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,7 @@
   width: 100%;
 }
 
-.service .service-container .service-area {
+.service-container .service-area {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -25,14 +25,14 @@
   width: 95%;
 }
 
-.service .service-container .service-area .para {
+.service-container .service-area .para {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 50%;
 }
 
-.service .service-container .service-area .para p {
+.service-container .service-area .para p {
   font-family: Montserrat;
   font-size: 20px;
   font-weight: 450;
@@ -44,7 +44,7 @@
   width: 90%;
 }
 
-.service .service-container .service-area .service-text {
+.service-container .service-area .service-text {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -55,7 +55,7 @@
   width: 50%;
 }
 
-.service .service-container .service-area .service-text h1 {
+.service-container .service-area .service-text h1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -74,7 +74,7 @@
   margin: 0;
 }
 
-.service .service-container .service-area .service-text h5 {
+.service-container .service-area .service-text h5 {
   justify-content: center;
   align-items: center;
   font-family: "Montserrat";
@@ -90,7 +90,7 @@
   padding: 0;
 }
 
-.service .service-container .service-area .service-about {
+.service-container .service-area .service-about {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +100,7 @@
   font-weight: 600;
 }
 
-.service .service-container .move-container {
+.service-container .move-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 20px;
@@ -109,7 +109,7 @@
   gap: 10px;
 }
 
-.service .service-container .move-container .move-item {
+.service-container .move-container .move-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -134,11 +134,11 @@
   flex-grow: 0;
 }
 
-.service .service-container .move-container .move-item:hover {
+.service-container .move-container .move-item:hover {
   background-color: blue;
 }
 
-.service .service-container .move-container .move-item h5 {
+.service-container .move-container .move-item h5 {
   width: 258px;
   height: 105px;
 
@@ -154,7 +154,7 @@
   color: #000000;
 }
 
-.service .service-container .move-container .move-item p {
+.service-container .move-container .move-item p {
   width: 321px;
 
   font-family: "Josefin Sans";
@@ -171,7 +171,7 @@
 
   color: #020e12;
 }
-.service .service-container .move-container .move-item .btn-area {
+.service-container .move-container .move-item .btn-area {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -189,7 +189,7 @@
 
 /* this will be for the other info section  */
 
-.service .service-container .other-info {
+.service-container .other-info {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   padding: 20px;
@@ -197,7 +197,7 @@
   gap: 10px;
 }
 
-.service .service-container .other-info .other-info-container {
+.service-container .other-info .other-info-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -209,7 +209,7 @@
   height: 476px;
 }
 
-.service .service-container .other-info .other-info-container h4 {
+.service-container .other-info .other-info-container h4 {
   width: 258px;
   height: 105px;
 
@@ -225,7 +225,7 @@
   color: #000000;
 }
 
-.service .service-container .other-info .other-info-container p {
+.service-container .other-info .other-info-container p {
   width: 321px;
   height: 100px;
 
@@ -241,7 +241,7 @@
 }
 
 @media screen and (max-width: 1638px) {
-  .service .service-container .other-info {
+  .service-container .other-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 20px;
@@ -251,33 +251,33 @@
 }
 
 @media screen and (max-width: 1166px) {
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 13rem;
     margin: 0 auto;
   }
 
-  .service .service-container .move-container > *:first-child {
+  .service-container .move-container > *:first-child {
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
   }
 
-  .service .service-container .move-container > :nth-child(2) {
+  .service-container .move-container > :nth-child(2) {
     grid-column: 2 / span 3;
   }
 
-  .service .service-container .move-container > *:last-child {
+  .service-container .move-container > *:last-child {
     grid-column: 2 / span 2;
     grid-row: 2 / span 2;
   }
 }
 
 @media screen and (max-width: 889px) {
-  .service .service-container .move-container {
+  .service-container .move-container {
     grid-template-columns: 1fr;
   }
 
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 8rem;
     margin: 0 auto;
@@ -285,7 +285,7 @@
 }
 
 @media screen and (max-width: 1090px) {
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 5rem;
     margin: 0 auto;
@@ -293,7 +293,7 @@
 }
 
 @media screen and (max-width: 1046px) {
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 5rem;
     margin: 0 auto;
@@ -301,42 +301,42 @@
 }
 
 @media screen and (max-width: 978px) {
-  .service .service-container .move-container {
+  .service-container .move-container {
     grid-template-columns: 1fr;
   }
 
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 8rem;
     margin: 0 auto;
   }
 
-  .service .service-container .move-container > *:first-child {
+  .service-container .move-container > *:first-child {
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
   }
 
-  .service .service-container .move-container > :nth-child(2) {
+  .service-container .move-container > :nth-child(2) {
     grid-column: 1 / span 1;
     grid-row: 2 / span 2;
   }
 
-  .service .service-container .move-container > *:last-child {
+  .service-container .move-container > *:last-child {
     grid-column: 1 / span 1;
     grid-row: 4 / span 4;
   }
 
-  .service .service-container .other-info {
+  .service-container .other-info {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media screen and (max-width: 809px) {
-  .service .service-container .other-info {
+  .service-container .other-info {
     grid-template-columns: 1fr;
   }
 
-  .service .service-container .move-container {
+  .service-container .move-container {
     padding: 5px 30px;
     padding-left: 1rem;
     margin: 0 auto;
