--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 0px;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .service-container .service-area {
