--- a/src/component/about/aboutnewcity.css
+++ b/src/component/about/aboutnewcity.css
@@ -112,7 +112,7 @@
     justify-content: center;
     margin: 1px auto;
     align-items: center;
-    padding: 40px 40px;
+    padding: 40px auto;
     gap: 10px;
   }
 }
