--- a/src/component/testimonies/testimonies.css
+++ b/src/component/testimonies/testimonies.css
@@ -3,9 +3,9 @@
 }
 
 .testimonies .peoples-container {
-  padding: 20px 30px;
+  padding: 20px;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -214,6 +214,7 @@
   letter-spacing: 0em;
   text-align: left;
   margin: 0;
+  max-width: 400px;
 }
 
 .testimonies-text .testimonies-text-top h4 {
@@ -233,12 +234,14 @@
   line-height: 24px;
   letter-spacing: 0.15000000596046448px;
   text-align: justified;
+  max-width: 400px;
 }
 
 .testimonies .testimonies-text-bottom .testimonies-bottom-bt {
   display: flex;
   align-items: center;
   gap: 20px;
+  max-width: 350px;
 }
 
 .testimonies .testimonies-text-bottom .testimonies-bottom-bt h2 {
@@ -276,5 +279,11 @@
   .testimonies-text {
     width: 100%;
     padding: 10px 10px;
+  }
+}
+
+@media screen and (max-width: 583px) {
+  .testimonies .peoples-container .people-testimonies .people-col2 {
+    display: none;
   }
 }
