--- a/src/component/about/aboutnewcity.css
+++ b/src/component/about/aboutnewcity.css
@@ -108,11 +108,13 @@
 
 @media screen and (max-width: 840px) {
   .aboutContainer {
-    display: inline-block;
+    /* width: 80%; */
+    display: flex;
     justify-content: center;
-    margin: 1px auto;
+    flex-direction: column;
     align-items: center;
-    padding: 40px auto;
+    margin: 10px auto;
+
     gap: 10px;
   }
 }
