--- a/src/component/testimonies/emailSection/inputemail.css
+++ b/src/component/testimonies/emailSection/inputemail.css
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .sendmail-container .sendmail-top {
@@ -53,7 +53,7 @@
 
 .sendmail-container .sendmail-bottom h6 {
   /*  */
-  height: 40px;
+  height: 30px;
   width: 90px;
 
   border-radius: 5px;
