--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,8 @@ input:focus {
 
 input {
   border: 2px solid #f5d90e;
+  /* border: none; */
+  /* outline: none; */
   height: 2rem;
   border-radius: 5px;
   width: 180px;
