--- a/src/component/testimonies/testimonies.css
+++ b/src/component/testimonies/testimonies.css
@@ -197,7 +197,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   width: 50%;
   padding: 10px 0 10px 20px;
   gap: 50px;
@@ -279,7 +279,7 @@
 
 @media screen and (max-width: 958px) {
   .testimonies .peoples-container {
-    display: inline-block;
+    display: block;
   }
 
   .testimonies .peoples-container .people-testimonies {
