--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,10 @@ Link {
 
 .about {
   margin-top: 7rem;
-  height: 100vh;
+  height: fit-content;
   animation: opacity-in 3s ease forwards;
 }
+
 @media screen and (max-width: 840px) {
   .about {
     height: fit-content;
@@ -118,9 +119,6 @@ input:focus {
 }
 
 input {
-  border: 2px solid #f5d90e;
-  /* border: none; */
-  /* outline: none; */
   height: 2rem;
   border-radius: 5px;
   width: 180px;
@@ -178,10 +176,3 @@ input {
   width: 50px;
   height: 30px;
 }
-/* 
-.facebook {
-  fill: blue;
-  border-radius: 70%;
-  object-fit: cover;
-  background: transparent;
-} */
