--- a/src/component/container1/containerone.css
+++ b/src/component/container1/containerone.css
@@ -71,8 +71,14 @@
   width: 95px;
 }
 
-@media screen and (max-width: 782px) {
+/* @media screen and (max-width: 782px) {
   .container-1 .container-content .btn-area {
     display: none;
+  }
+} */
+
+@media screen and (max-width: 818px) {
+  .containpics {
+    height: fit-content;
   }
 }
