--- a/src/component/container1/selectitem.css
+++ b/src/component/container1/selectitem.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   width: 70%;
   background-color: #391cee;
-  margin: 10px auto;
+  margin: 30px auto;
   margin-top: 2rem;
-  padding: 10px 60px;
+  padding: 10px;
   max-width: 800px;
   justify-content: flex-start;
 }
@@ -31,7 +31,6 @@
     display: flex;
     width: 70%;
     justify-content: flex-start;
-    margin: 2rem 0 4px 2rem;
   }
 
   .travel .travel-input {
@@ -45,9 +44,8 @@
 @media screen and (max-width: 1038px) {
   .travel {
     display: flex;
-    width: 70%;
+    width: 40%;
     justify-content: flex-start;
-    margin: 2rem 0 4px 2rem;
     padding: 10px 30px;
   }
 
@@ -57,4 +55,8 @@
     gap: 10px;
     align-items: center;
   }
+}
+
+@media screen and (max-width: 1038px) {
+  /*  */
 }
