--- a/src/component/testimonies/aboutTestimonies.css
+++ b/src/component/testimonies/aboutTestimonies.css
@@ -12,19 +12,16 @@
 
 .abouttestimonies .peoples-container .people-testimonies {
   display: flex;
+  overflow: scroll;
+
   gap: 20px;
-  width: 80%;
-  justify-content: space-between;
+  width: 95%;
   align-items: center;
 }
 
-.abouttestimonies .peoples-container .people-testimonies {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
+.abouttestimonies .peoples-container .people-testimonies ::-webkit-scrollbar {
+  display: none;
 }
-
 .abouttestimonies .peoples-container .people-testimonies .user1 {
   border-radius: 10px 10px 50px 10px;
 }
@@ -126,10 +123,10 @@
 .abouttestimonies .peoples-container .people-testimonies {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 20px;
   margin: 2rem 0;
-  /* padding */
+  padding: 20px 0;
+  justify-content: space-between;
 }
 
 .abouttestimonies .peoples-container .people-testimonies .user3 {
