--- a/src/index.css
+++ b/src/index.css
@@ -71,9 +71,10 @@ Link {
 
 .btn-area {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 20px;
   align-items: center;
-  gap: 12px;
+  gap: 10px;
 }
 
 .btn {
