--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,8 @@ Link {
 
 .btn-area {
   display: flex;
-  justify-content: space-between;
-  padding: 0 20px;
+  justify-content: center;
+  /* padding: 0 20px; */
   align-items: center;
   gap: 10px;
 }
@@ -104,7 +104,7 @@ Link {
   display: flex;
   justify-content: center;
   background: #f5d90e;
-  width: 250px;
+  width: 10rem;
   align-items: center;
   min-height: 1rem;
 }
