--- a/src/component/testimonies/testimonies.css
+++ b/src/component/testimonies/testimonies.css
@@ -15,6 +15,8 @@
   gap: 20px;
   width: 80%;
   justify-content: flex-end;
+  padding: 30px 0;
+  margin-top: 1rem;
 }
 
 .testimonies .peoples-container .people-testimonies .people-col1 {
@@ -200,7 +202,7 @@
   justify-content: center;
   width: 50%;
   padding: 10px 0 10px 20px;
-  gap: 50px;
+  gap: 30px;
   /* text-align: right; */
 }
 
@@ -294,12 +296,20 @@
     padding: 10px 30px;
   }
 
+  .testimonies-text .testimonies-text-top h5 {
+    font-size: 50px;
+  }
+  .testimonies-text .testimonies-text-top h4 {
+    font-size: 30px;
+  }
+
   .testimonies-text {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 10px auto;
+    width: 100%;
   }
 }
 
