--- a/src/component/operation/operation.css
+++ b/src/component/operation/operation.css
@@ -1,5 +1,5 @@
 .operations {
-  padding: 20px 70px;
+  padding: 20px;
 }
 
 .operations .operation-text {
@@ -57,8 +57,27 @@
 }
 
 @media screen and (max-width: 450px) {
+  .operations {
+    padding: 20px 10px;
+  }
+  .operations .operation-text h4 {
+    font-weight: 300;
+    font-size: 54px;
+    line-height: 54px;
+  }
+
+  .operations .operation-text h6 {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 34px;
+  }
+
   .operations .operation-image img {
     right: 20%;
     height: 8rem;
+  }
+
+  .operations .operation-image {
+    width: 100%;
   }
 }
