--- a/src/component/OurService/servicequestion.css
+++ b/src/component/OurService/servicequestion.css
@@ -155,6 +155,7 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    padding: 5rem 0;
   }
 
   .service-area .para {
