--- a/src/component/container1/containerone.css
+++ b/src/component/container1/containerone.css
@@ -4,7 +4,7 @@
   background-position: 100% 100%;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 100vh;
+  height: fit-content;
 }
 
 .container-1 {
