--- a/src/component/OurService/allsevices.css
+++ b/src/component/OurService/allsevices.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  max-width: 550px;
+  width: 70%;
 }
 
 .all-servicescontainer .all-servicetext h4 {
@@ -31,7 +31,7 @@
 }
 
 .all-servicescontainer .all-servicetext .text-area p {
-  height: 159px;
+  /* height: 159px; */
   height: 100%;
   left: 7px;
   top: 102px;
@@ -40,7 +40,7 @@
   letter-spacing: 0.114763px;
 
   /* text */
-  padding: 0 70px;
+  padding: 0 50px;
   color: #020e12;
 }
 
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 550px;
+  /* width:5; */
   padding: 20px;
 }
 
@@ -57,4 +57,30 @@
   /* justify-content:center */
   align-items: center;
   width: 100%;
+}
+
+@media screen and (max-width: 925px) {
+  .all-servicescontainer {
+    flex-direction: column;
+    height: fit-content;
+    padding: 30px 0;
+
+    border-radius: 0px;
+  }
+
+  .all-servicescontainer .all-servicetext h4 {
+    font-family: Josefin Sans;
+    font-size: 39px;
+    font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 0em;
+    color: #000000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .all-servicescontainer .all-servicetext {
+    width: 100%;
+  }
 }
