--- a/src/component/about/aboutnewcity.css
+++ b/src/component/about/aboutnewcity.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 40px 40px;
+  padding: 0px 40px;
   gap: 10px;
-  max-height: 50rem;
+  height: 50rem;
 }
 
 .aboutContainer .about-text {
@@ -113,9 +113,9 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 10px auto;
+    /* margin: 10px auto; */
 
-    gap: 10px;
+    gap: 20px;
   }
 }
 @media screen and (max-width: 620px) {
@@ -125,6 +125,8 @@
     justify-content: center;
     margin: 1px auto;
     align-items: center;
+    height: fit-content;
+    padding: 30px;
     gap: 10px;
   }
   .aboutContainer .about-text {
