--- a/src/component/NavBar/navbar.css
+++ b/src/component/NavBar/navbar.css
@@ -74,6 +74,10 @@
   display: none;
 }
 
+.nav .nav-container .loginMenu {
+  display: none;
+}
+
 .nav .nav-container .loginMenu .btn-area {
   display: flex;
   justify-content: space-around;
@@ -116,6 +120,9 @@
   }
   .nav .nav-container .nav-btnarea {
     display: none;
+  }
+  .nav .nav-container .loginMenu {
+    display: inline-block;
   }
 
   .nav .nav-container {
