--- a/src/component/operation/operation.css
+++ b/src/component/operation/operation.css
@@ -57,7 +57,7 @@
 }
 
 @media screen and (max-width: 450px) {
-  .operations .operation-text h4 {
+  /* .operations .operation-text h4 {
     font-weight: 300;
     font-size: 54px;
     line-height: 54px;
@@ -67,7 +67,7 @@
     font-weight: 400;
     font-size: 26px;
     line-height: 34px;
-  }
+  } */
 
   .operations .operation-image img {
     right: 20%;
