--- a/src/component/loginComponent/loginform.css
+++ b/src/component/loginComponent/loginform.css
@@ -195,9 +195,9 @@
   }
 }
 
-@media screen and (max-width: 446px) {
+/* @media screen and (max-width: 446px) {
   .loginform-container {
     width: 100%;
     gap: 25.64px;
   }
-}
+} */
