--- a/src/component/fotter/fotter.css
+++ b/src/component/fotter/fotter.css
@@ -40,7 +40,7 @@
 .fotter-container .fotter-col2 {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 70px;
 }
 
 .fotter-container .fotter-col2 .fotter-col3 {
@@ -76,11 +76,12 @@
 
 @media screen and (max-width: 651px) {
   .fotter-container .fotter-col1 {
-    display: flex;
-    flex-direction: row;
+    display: inline-block;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
   }
+
   .fotter-container {
     background-color: #391cee;
     width: 95%;
@@ -88,6 +89,7 @@
     justify-content: space-between;
     gap: 30px;
   }
+
   .fotter-container .fotter-col2 {
     display: flex;
     flex-direction: column;
