--- a/src/component/NavBar/navbar.css
+++ b/src/component/NavBar/navbar.css
@@ -2,48 +2,66 @@
   position: fixed;
   top: 0;
   justify-content: space-around;
-  /* padding: 5px 5rem; */
-  background: rgba(254, 253, 243, 0.7);
+  background: rgba(254, 253, 243, 0.95);
   box-shadow: 0px 5px 33px rgba(185, 212, 237, 0.3);
-  z-index: 700;
-  width: 100%;
-  animation: come-up 2s ease forwards;
-}
+  border-radius: 0px;
 
-@keyframes come-up {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0);
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2px 139px;
+  gap: 10px;
+  height: 70px;
+  width: 100%;
+  z-index: 1000;
 }
 
 .nav .nav-container {
-  display: flex;
+  /* ?edited */
+  /* display: flex;
   justify-content: space-around;
+  align-items: center; */
+
+  display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  padding: 0px;
+  /* gap: 311px; */
+  width: 100%;
+  height: 66.67px;
 }
 
 .nav .nav-container .nav-item {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  width: 50%;
+  padding: 0px;
+  gap: 167px;
+
+  width: 787px;
+  height: 51px;
 }
 
-.nav .nav-container .nav-item .nav-logo-item {
+.nav .nav-container .nav-logo-item {
   /* for logo design */
-  min-height: 100px;
+  /* width: 79.09px; */
+  width: 79.09px;
+  height: 66.67px;
   border-radius: 25px;
-  width: 90px;
   background-color: transparent;
   opacity: 0.5;
 }
 
 .nav .nav-container .nav-item ul {
   display: flex;
-  gap: 15px;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 20px;
+
+  width: 291px;
+  height: 28px;
 }
 
 .nav .nav-container .nav-item ul li {
