--- a/src/component/OurService/allsevices.css
+++ b/src/component/OurService/allsevices.css
@@ -14,7 +14,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 70%;
+  width: 40%;
 }
 
 .all-servicescontainer .all-servicetext h4 {
@@ -38,7 +38,10 @@
   border-radius: nullpx;
   text-align: justify;
   letter-spacing: 0.114763px;
-
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* text */
   padding: 0 50px;
   color: #020e12;
@@ -67,20 +70,14 @@
 
     border-radius: 0px;
   }
+  .reverse {
+    flex-direction: column-reverse;
+  }
 
-  /* .all-servicescontainer .all-servicetext h4 {
-    font-family: Josefin Sans;
-    font-size: 39px;
-    font-weight: 400;
-    line-height: 34px;
-    letter-spacing: 0em;
-    color: #000000;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
+  .all-servicescontainer .all-servicetext .text-area p {
+    width: 80%;
+  }
   .all-servicescontainer .all-servicetext {
-    width: 100%;
+    width: 90%;
   }
 }
