--- a/src/component/OurService/ourservice.css
+++ b/src/component/OurService/ourservice.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 0px;
-  /* width: 100%; */
 }
 .service-container .move-container {
   display: grid;
@@ -34,15 +33,12 @@
 
   width: 300px;
   height: 466px;
-  /* background will be for image url for all the card boxes  */
-
   background: #fbfeff;
 
   /* text */
   border: 2px solid #020e12;
   border-radius: 7.65086px;
 
-  /* Inside auto layout */
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -67,7 +63,9 @@
 
   color: #000000;
 }
-
+.service-container .move-container .move-item .more-text {
+  height: 114px;
+}
 .service-container .move-container .move-item p {
   width: 321px;
 
@@ -82,7 +80,6 @@
   letter-spacing: 0.114763px;
 
   /* text */
-
   color: #020e12;
 }
 .service-container .move-container .move-item .btn-area {
