--- a/src/component/OurService/servicequestion.css
+++ b/src/component/OurService/servicequestion.css
@@ -1,9 +1,9 @@
 .service-area {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: center;
   gap: 20px;
+  margin-top: 30px;
 }
 
 .service-area .para {
@@ -31,6 +31,8 @@
   flex-direction: column;
   align-items: center;
   height: 10rem;
+  height: 116px;
+  width: 30%;
 }
 
 .service-area .service-text h1 {
@@ -47,9 +49,6 @@
   /* or 91% */
 
   color: #242527;
-
-  padding: 0;
-  margin: 0;
 }
 
 .service-area .service-text h5 {
@@ -80,9 +79,13 @@
 .other-info {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: center;
   padding: 20px;
   margin: 1rem;
   gap: 10px;
+  width: 90%;
+  margin: 5rem 0;
 }
 
 .other-info .other-info-container {
@@ -91,9 +94,9 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  /* gap: 20px; */
-
-  height: 356px;
+  width: 100%;
+  gap: 29px;
+  height: 406px;
 }
 
 .other-info .other-info-container h4 {
