--- a/src/component/about/aboutnewcity.css
+++ b/src/component/about/aboutnewcity.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0px 40px;
+  padding: 0px 30px;
   gap: 10px;
   height: 50rem;
 }
@@ -80,14 +80,13 @@
   background-color: red;
   flex-direction: column;
   align-items: center;
-  max-width: 500px;
-  flex: 1;
-  height: 50rem;
 }
 
 .about--text .about-image-container img {
   border-radius: 3px;
   position: relative;
+  width: 618px;
+  height: 494px;
 }
 
 .about--text .about-image-container .dot-container {
