--- a/src/component/container1/selectitem.css
+++ b/src/component/container1/selectitem.css
@@ -6,54 +6,44 @@
   margin: 30px auto;
   margin-top: 2rem;
   padding: 10px;
-  max-width: 800px;
   justify-content: flex-start;
+  gap: 10px;
   box-shadow: 0px 5px 33px rgba(185, 212, 237, 0.3);
   border-radius: 5px;
+
+  width: 1268px;
+  height: 165px;
 }
 
 .travel h3 {
   color: white;
 }
 
+.travel .travel-text {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 0 100px;
+
+  color: #fbfeff;
+}
+
 .travel .travel-input {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  gap: 10px;
-  /* justify-content: space-between; */
-  align-items: center;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 54px;
+
+  width: 1057.68px;
+  height: 44px;
+  left: 93px;
+  top: 91px;
+  padding: 0 100px;
 }
 
 .travel .travel-input .travel-item {
   align-items: center;
-}
-
-@media screen and (max-width: 1198px) {
-  .travel {
-    display: flex;
-    width: 70%;
-    justify-content: flex-start;
-  }
-
-  .travel .travel-input {
-    display: flex;
-    gap: 10px;
-    /* justify-content: space-between; */
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 1038px) {
-  .travel {
-    display: flex;
-    width: 80%;
-    justify-content: flex-start;
-  }
-
-  .travel .travel-input {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-  }
 }
