--- a/src/component/testimonies/testimonies.css
+++ b/src/component/testimonies/testimonies.css
@@ -7,7 +7,7 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  gap: 79px;
+  gap: 30px;
 }
 
 .testimonies .peoples-container .people-testimonies {
@@ -15,7 +15,7 @@
   gap: 20px;
   width: 80%;
   justify-content: flex-end;
-  padding: 30px 0;
+  padding: 30px 10px;
   margin-top: 1rem;
 }
 
