--- a/src/component/container1/containerone.css
+++ b/src/component/container1/containerone.css
@@ -30,6 +30,7 @@
   line-height: 58px;
   max-width: 450px;
   border: 1px solid rgba(2, 14, 18, 0.3);
+  margin-top: 1rem;
 }
 
 .container-1 .container-content h2 span {
@@ -59,6 +60,11 @@
 
   width: 477px;
   height: 116px;
+  margin-top: -2rem;
+}
+
+.container-1 .container-content .tand {
+  margin-top: -1.8rem;
 }
 
 .container-1 .container-content .btn-area {
